# fortisiem-synthetic-senders

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: assets.csv  c2_domains.csv  c2_ips.csv  malware_samples.csv  powershell_encoded_commands.csv  users_ad.csv  vmware_users.csv
log_repository/campaigns/: apt.csv  bruteforce.csv  mixed.csv  phishing.csv  ransomware.csv  ransomware_roles_example.csv  vmware_compromise.csv  vmware_compromise_custom.csv  work_vpn.csv
log_repository/fortiedr/: detection.csv  ransomware.csv
log_repository/fortigate/: traffic.csv  vpn.csv
log_repository/fortimail/: phishing.csv
log_repository/linux/: linux.csv
log_repository/vmware/: auth.csv  inventory.csv  power.csv  snapshots.csv
log_repository/windows/: windows.csv
src/fortisiem_send/: __init__.py  asset_utils.py  constants.py  csv_io.py  ip_utils.py  loaders.py  models.py  render.py  runner.py  syslog.py  templates.py
src/fortisiem_send/cli/: __init__.py  common.py  fortiedr.py  fortigate_traffic.py  fortigate_vpn.py  fortimail.py  linux.py  vmware.py  windows.py
